feat: add gamification, offline sync, audit log, damage severity, dashboard improvements